20210720 1.1.2 Disabled HTTP/2 as this is not enabled in the standard ADCS deployment
               Simplified the creation of the net/http client object
               Bumped dependancy versions
               Updated versioning to allow for a version suffix
20210205 1.1.1 Fixed printf in webenrollmentnewrequest
20210205 1.1.0 Added Versioning

Before 2021
Untracked in changelog. See git history